# RoCrateProfileProposal

./: README.md  README.qmd  index.qmd  pyproject.toml
count/: invalid.jsonld  schema.jsonld  valid.jsonld
instrument/: invalid.jsonld  schema.jsonld  valid.jsonld
rdfs/: schema.jsonld
