[project]
name = "rocrateprofiles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "notebook>=7.4.2",
    "pyshacl>=0.30.1",
    "rdflib>=7.1.4",
]
